Fixed navigation colors & table vertical alignment

--- a/fresh.css
+++ b/fresh.css
@@ -79,7 +79,7 @@ caption,
 th,
 td {
   text-align: left;
-  vertical-align: top;
+  vertical-align: middle;
 }
 thead th,
 thead td {
@@ -3355,12 +3355,6 @@ nav:not(.flat).lined ul > li > span {
   border-bottom: 1px solid transparent;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-}
-.nav.lined ul > li > a > [class|="fa"],
-.nav.lined ul > li > span > [class|="fa"],
-nav:not(.flat).lined ul > li > a > [class|="fa"],
-nav:not(.flat).lined ul > li > span > [class|="fa"] {
-  color: #105c9a;
 }
 .nav.lined ul > li > a:hover,
 nav:not(.flat).lined ul > li > a:hover {
