--- a/src/navs.less
+++ b/src/navs.less
@@ -79,10 +79,6 @@
 
 			border-bottom: 1px solid transparent;
 			.border-bottom-radius(0);
-			
-			> [class|="fa"] {
-				color: @nav-active-bg;
-			}
 		}
 		
 		> a:hover {
