--- a/src/reset.less
+++ b/src/reset.less
@@ -90,7 +90,7 @@ table {
 
 caption, th, td {
 	text-align: left;
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 thead th,
